fix icon-text component line-height when text is wrapping

--- a/assets/sass/atoms/_icon-text.scss
+++ b/assets/sass/atoms/_icon-text.scss
@@ -5,14 +5,17 @@
 
   &.icon-text-center {
     display: flex;
-    align-items: center;
-    line-height: 0;
+    align-items: flex-start;
   }
 
   .retraitespopulaires-icon-lock {
     position: absolute;
     top: 50%;
     margin-top: -0.6em;
+  }
+
+  .retraitespopulaires-icon {
+    margin-top: 0.2em;
   }
 
   .icon-text-txt {
